fix: minor bugs in tests